MUI 重构 + API Key 管理与公告自动化推送 + 添加测试框架支持
* :sparkles: 实现 API key 管理与自动化推送功能

- 新增 API key 的创建、列表查看与撤销功能
- 支持 editor 角色用户管理个人 API key
- 实现基于 API key 的自动化公告推送接口
- 添加 Mock 模式下 API key 功能的完整模拟
- 更新权限控制逻辑以支持细粒度的 Mod 访问限制
- 优化系统初始化检测逻辑，通过探测 /api/mod/list 状态判断
- 完善 .env.example 配置说明，增加 VITE_MOCK_SEED_USERS 选项
- 调整 AdminTools 组件结构，区分 super 和 editor 用户界面
- 移除 ApiDebugModal 中的旧版 Token 显示逻辑
- 更新相关类型定义和常量配置

* :sparkles: 巨型重构

- 将页面从 Tailwind CSS 迁移至 MUI 组件库
- 重构 AdminTools 组件使用 MUI Tabs 替代原生按钮组
- 更新 AnnouncementCard 组件为 MUI Card 并增强交互功能
- 优化 AnnouncementsPanel 面板布局及空状态提示
- 重写 ApiDebugModal 模态框支持完整 API 测试功能
- 移除旧版样式代码并统一使用 MUI 主题配置
- 增加权限控制逻辑确保操作安全性
- 提升组件间通信效率与用户体验一致性

* :art: 代码质量优化 - 修复56个IDE/TS问题

- 新增typecheck脚本，Worker严格类型检查通过
- 统一短导入路径，删除未使用导出（YAGNI）
- 抽取重复逻辑（DRY），简化条件判断（KISS）
- 补齐异步调用异常处理，修复隐式any类型
- 统一换行符为LF，净减少13行代码

涉及22个文件，遵循KISS/YAGNI/DRY/SOLID原则

* :memo: 重构项目文档结构并完善内容

- 重新组织 README.md 结构，增加项目简介、功能特性、技术栈等章节
- 添加详细的快速开始指南和本地开发步骤
- 补充完整的项目结构说明和 API 文档
- 增加权限模型和部署指南
- 添加许可证文件 (MIT)

* :bug: 修复API密钥管理并发问题和安全漏洞

## 主要变更

### 1. 修复Worker KV并发写导致状态丢失的问题
- **workers/src/index.ts**: 将API密钥使用时间戳(lastUsedAt)存储到独立的KV键中
  - `getApiKeyByToken`不再回写整个记录，避免与吊销操作竞争
  - `/api/apikey/list`接口返回时合并lastUsedAt字段
  - 防止"最后写入胜出"行为导致已吊销状态被旧状态覆盖

### 2. 修复公告渲染XSS安全漏洞
- **utils/sanitizeHtml.ts**: 新增HTML净化器，使用allowlist策略
- **components/AnnouncementCard.tsx**: 渲染前对content_html进行安全净化
  - 仅允许安全的HTML标签和属性
  - 移除所有脚本和事件处理器，防止跨站脚本攻击
  - 支持从API/CI推送等不可信来源的内容安全渲染

### 3. 修复Mock API与生产环境行为不一致问题
- **services/apiService.ts**: 调整Mock模式下API密钥的存储和返回逻辑
  - 创建时仅返回一次token，后续列表不再包含原始token
  - 自动迁移清理历史数据中的token字段
  - 确保Mock环境与生产API行为一致，避免隐藏token泄露问题

### 影响
 - API密钥状态管理更安全，避免并发操作导致意外状态回滚
 - 公告系统具备XSS防护能力，用户浏览更安全
 - 开发环境Mock行为与生产一致，提高测试有效性

* :sparkles: 添加 vitest 测试框架支持

- 在 package.json 中添加 test 和 test:coverage 脚本命令
- 引入 vitest 和 @vitest/coverage-v8 依赖
- 更新 pnpm-lock.yaml 文件以包含新添加的测试相关依赖包
- 为项目增加单元测试和覆盖率检查能力

* :white_check_mark: 集成 Codecov 测试覆盖率报告和测试基础设施

- 添加 Codecov 配置文件，设置覆盖率状态为 informational
- 集成 @codecov/vit

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ lerna-debug.log*
 coverage/
 *.lcov
 .nyc_output/
+junit.xml
 
 # ============================================
 # 临时文件
@@ -98,3 +99,4 @@ Desktop.ini
 *.tar.gz
 .history/
 .eslintcache
+/.claude/
