--- a/package.json
+++ b/package.json
@@ -7,22 +7,40 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "worker:dev": "wrangler dev --port 8787",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "typecheck": "tsc --noEmit",
+    "typecheck:worker": "tsc -p workers/tsconfig.json --noEmit",
+    "check": "npm run -s typecheck && npm run -s typecheck:worker && npm run -s build",
+    "worker:dev": "node scripts/prepare-dev-vars.mjs && wrangler dev --port 8787",
     "worker:deploy": "wrangler deploy"
   },
   "dependencies": {
-    "lucide-react": "0.469.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/material": "^7.3.6",
+    "@tiptap/extension-link": "^3.13.0",
+    "@tiptap/extension-underline": "^3.13.0",
+    "@tiptap/pm": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
+    "mui-tiptap": "^1.28.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-quill": "2.0.0",
     "simple-icons": "^16.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "latest",
+    "@codecov/vite-plugin": "^1.9.1",
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/coverage-v8": "^4.0.16",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
+    "vitest": "^4.0.16",
     "wrangler": "latest"
   }
 }
